--- a/soundscape-ui/src/app/login/login.component.html
+++ b/soundscape-ui/src/app/login/login.component.html
@@ -6,3 +6,8 @@
     <br>
     <button (click)="login()">Login</button>
 </div>
+<div>
+    <h2>Don't have an account?</h2>
+    <br>
+    <button (click)="register()">Register</button>
+</div>
