--- a/soundscape-ui/src/app/register/register.component.html
+++ b/soundscape-ui/src/app/register/register.component.html
@@ -1,1 +1,17 @@
 <p>register works!</p>
+<div>
+    <input id= "username" type="text" placeholder="Username">
+    <br>
+    <input id ="password" type="text" placeholder="Password">
+    <br>
+    <input id ="email" type="text" placeholder="Email">
+    <br>
+    <input id ="bio" type="text" placeholder="Bio">
+    <br>
+    <input id ="city" type="text" placeholder="City and State (e.g. New York, NY)">
+    <br>
+    <button (click)="register()">Register</button>
+</div>
+<div>
+    <button (click)="back()">Back</button>
+</div>
