--- a/soundscape-ui/src/app/main-menu/main-menu.component.html
+++ b/soundscape-ui/src/app/main-menu/main-menu.component.html
@@ -1,4 +1,7 @@
-<p>main-menu works!</p>
 <div>
+    <button (click)="account()">Account</button>
+</div>
+<div>
+
     <button (click)="logout()">Logout</button>
 </div>
