Added tests for service, now can follow a user, but with errors, including deleting user and their follow records

--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -1,4 +1,6 @@
 <h1>{{username}}</h1>
+<input id="follow" placeholder="Username of Friend" type="text">
+<button (click)="follow()">Follow</button>
 <h2>Followers:</h2>
 <button (click)="back()">Back</button>
 <h2>Want to Delete Account?</h2>
