Followers are now displayed on the account page

--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -2,6 +2,9 @@
 <input id="follow" placeholder="Username of Friend" type="text">
 <button (click)="follow()">Follow</button>
 <h2>Followers:</h2>
+<ul>
+    <li *ngFor="let follower of followers">{{follower}}</li>
+</ul>
 <button (click)="back()">Back</button>
 <h2>Want to Delete Account?</h2>
 <button (click)="deleteAccount()">Delete Account PERMANENTLY</button>
