you can now unfollow now, and there's a following page now

--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -4,6 +4,8 @@
 <br>
 <button (click)="viewFollowers()">View Followers</button>
 <br>
+<button (click)="viewFollowing()">View Following</button>
+<br>
 <button (click)="back()">Back</button>
 <h2>Want to Delete Account?</h2>
 <button (click)="deleteAccount()">Delete Account PERMANENTLY</button>
