--- a/soundscape-ui/src/app/followers/followers.component.html
+++ b/soundscape-ui/src/app/followers/followers.component.html
@@ -1,5 +1,5 @@
 <h2>Followers:</h2>
 <ul>
-    <li *ngFor="let follower of followers">{{follower}} <button (click) = "unfollow(follower)">Unfollow</button></li>
+    <li *ngFor="let follower of followers">{{follower}}</li>
 </ul>
 <button (click)="back()">Back</button>
