Now redirects to the first spotify page successfully

--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -6,6 +6,8 @@
 <br>
 <button (click)="viewFollowing()">View Following</button>
 <br>
+<button (click)="spotifySetup()">Connect to Spotify?</button>
+<br>
 <button (click)="back()">Back</button>
 <h2>Want to Delete Account?</h2>
 <button (click)="deleteAccount()">Delete Account PERMANENTLY</button>
