Keeps track is user is connected to spotify already or not, although technically doesn't work

--- a/soundscape-ui/src/app/register/register.component.html
+++ b/soundscape-ui/src/app/register/register.component.html
@@ -8,7 +8,9 @@
     <br>
     <input id ="bio" type="text" placeholder="Bio">
     <br>
-    <input id ="city" type="text" placeholder="City and State (e.g. New York, NY)">
+    <input id ="city" type="text" placeholder="City">
+    <br>
+    <input id ="state" type="text" placeholder="State">
     <br>
     <button (click)="register()">Register</button>
 </div>
