--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -6,7 +6,12 @@
 <br>
 <button (click)="viewFollowing()">View Following</button>
 <br>
-<button (click)="spotifySetup()">Connect to Spotify?</button>
+<div *ngIf="!connectedToSpotify">
+    <button (click)="spotifySetup()">Connect to Spotify?</button>
+</div>
+<div *ngIf="connectedToSpotify">
+    <h2>Connected to Spotify</h2>
+</div>
 <br>
 <button (click)="back()">Back</button>
 <h2>Want to Delete Account?</h2>
