--- a/soundscape-ui/src/app/account/account.component.html
+++ b/soundscape-ui/src/app/account/account.component.html
@@ -8,7 +8,7 @@
 <br>
 
 <div *ngIf="artistId">
-    <button (click)="songs()">View Songs</button>
+    <button (click)="songs()">View Your Music</button>
     <br>
     <button (click)="disconnectSpotify()">Stop Being an Artist?</button>
 </div>
