--- a/soundscape-ui/src/app/songs/songs.component.html
+++ b/soundscape-ui/src/app/songs/songs.component.html
@@ -1,3 +1,3 @@
-<button (click)="getAlbums()">Get Albums</button>
+<li *ngFor="let name of albumNames">{{name}}</li>
 <br>
 <button (click)="back()">Back</button>
