Albums are buttons, click one to see a list of tracks as JSON string

--- a/soundscape-ui/src/app/songs/songs.component.html
+++ b/soundscape-ui/src/app/songs/songs.component.html
@@ -1,3 +1,7 @@
-<li *ngFor="let name of albumNames">{{name}}</li>
+<h1>Albums</h1>
+<div *ngFor="let album of albumTracks | keyvalue: originalOrder">
+  <button (click)="getTracks(album.value)">{{ album.key }}</button>
+  
+</div>
 <br>
 <button (click)="back()">Back</button>
