Tracks of an album are now properly listed, need to work on album loading time

--- a/soundscape-ui/src/app/album-tracks/album-tracks.component.html
+++ b/soundscape-ui/src/app/album-tracks/album-tracks.component.html
@@ -1,5 +1,7 @@
 <div>
-    <p>{{tracks}}</p>
+    <div *ngFor="let track of tracks">
+        <li>{{track}}</li>
+    </div>
     <br>
     <button (click) = "back()">Back</button>
 </div>
