Search users is a separate page on the main menu, gonna be able to view accounts and follow from there

--- a/soundscape-ui/src/app/main-menu/main-menu.component.html
+++ b/soundscape-ui/src/app/main-menu/main-menu.component.html
@@ -1,4 +1,6 @@
 <div>
+    <button (click)="searchProfiles()">Search Profiles</button>
+    <br>
     <button (click)="account()">Account</button>
 </div>
 <div>
